# shoal

./: ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.multi  README.md  plan.md
.github/workflows/: docker.yml
crates/shoal-cas/: Cargo.toml
crates/shoal-cas/benches/: chunking.rs
crates/shoal-cas/src/: cdc_chunker.rs  chunker.rs  error.rs  lib.rs  manifest.rs
crates/shoal-cli/: Cargo.toml
crates/shoal-cli/src/: main.rs
crates/shoal-cluster/: Cargo.toml
crates/shoal-cluster/src/: error.rs  gossip.rs  identity.rs  lib.rs  membership.rs  state.rs  tests.rs
crates/shoal-engine/: Cargo.toml
crates/shoal-engine/benches/: pipeline.rs
crates/shoal-engine/src/: cache.rs  engine.rs  error.rs  lib.rs  manifest_store.rs  node.rs  pending.rs  tests.rs
crates/shoal-engine/src/tests/: basic.rs  cdc.rs  chaos.rs  concurrency.rs  edge_cases.rs  erasure.rs  helpers.rs  mod.rs  multi_node.rs  networked.rs  real_transport.rs  shard_distribution.rs
crates/shoal-erasure/: Cargo.toml
crates/shoal-erasure/benches/: erasure.rs
crates/shoal-erasure/src/: config.rs  decoder.rs  encoder.rs  error.rs  lib.rs
crates/shoal-logtree/: Cargo.toml
crates/shoal-logtree/src/: entry.rs  error.rs  lib.rs  store.rs  tree.rs
crates/shoal-logtree/src/tests/: dag_tests.rs  entry_tests.rs  integrity_tests.rs  mod.rs  snapshot_tests.rs  sync_tests.rs  tree_tests.rs  versioning_tests.rs
crates/shoal-meta/: Cargo.toml
crates/shoal-meta/src/: error.rs  lib.rs  store.rs
crates/shoal-net/: Cargo.toml
crates/shoal-net/src/: error.rs  lib.rs  message.rs  tests.rs  transport.rs
crates/shoal-placement/: Cargo.toml
crates/shoal-placement/src/: lib.rs  ring.rs
crates/shoal-repair/: Cargo.toml
crates/shoal-repair/src/: circuit_breaker.rs  detector.rs  error.rs  executor.rs  lib.rs  scheduler.rs  scrub.rs  tests.rs  throttle.rs
crates/shoal-s3/: Cargo.toml
crates/shoal-s3/src/: auth.rs  error.rs  handlers.rs  lib.rs  tests.rs  xml.rs
crates/shoal-store/: Cargo.toml
crates/shoal-store/src/: error.rs  file_store.rs  lib.rs  memory_store.rs  slow_store.rs  traits.rs
crates/shoal-types/: Cargo.toml
crates/shoal-types/src/: events.rs  lib.rs
crates/shoald/: Cargo.toml
crates/shoald/src/: config.rs  handler.rs  main.rs  telemetry.rs
docs/: architecture.md  configuration.md  deep-review.md  getting-started.md  migration-remove-foca.md  plan.md  real-transport-tests-plan.md  research-manifest-sync.md  security.md
tests/: Cargo.toml
tests/chaos/: network_partition.rs  random_kill.rs
tests/integration/: cluster_formation.rs  local_pipeline.rs  node_failure.rs  rebalancing.rs  stress.rs  torture.rs  write_read.rs
tests/src/: lib.rs
