[workspace]
members = [
    "crates/shoal-types",
    "crates/shoal-store",
    "crates/shoal-cas",
    "crates/shoal-meta",
    "crates/shoal-erasure",
    "crates/shoal-placement",
    "crates/shoal-cluster",
    "crates/shoal-repair",
    "crates/shoal-net",
    "crates/shoal-engine",
    "crates/shoal-logtree",
    "crates/shoal-s3",
    "crates/shoald",
    "tests",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
shoal-types = { path = "crates/shoal-types" }
shoal-store = { path = "crates/shoal-store" }
shoal-cas = { path = "crates/shoal-cas" }
shoal-meta = { path = "crates/shoal-meta" }
shoal-erasure = { path = "crates/shoal-erasure" }
shoal-placement = { path = "crates/shoal-placement" }
shoal-cluster = { path = "crates/shoal-cluster" }
shoal-repair = { path = "crates/shoal-repair" }
shoal-net = { path = "crates/shoal-net" }
shoal-engine = { path = "crates/shoal-engine" }
shoal-logtree = { path = "crates/shoal-logtree" }
shoal-s3 = { path = "crates/shoal-s3" }

# Hashing
blake3 = "1"

# Metadata DB
fjall = "3"

# Erasure coding
reed-solomon-simd = "3"

# Networking
iroh = "0.96"
iroh-gossip = { version = "0.96", features = ["net"] }

# Random
rand = "0.9"

# Serialization
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }

# HTTP
axum = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Buffers
bytes = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
toml = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (gated behind `telemetry` feature in shoald)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls-webpki-roots"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = { version = "0.31", features = ["experimental_use_tracing_span_context"] }
tonic = "0.14"

# Error handling
thiserror = "2"
anyhow = "1"

# Signing
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Constant-time comparison (auth)
subtle = "2"

# HMAC / SHA-256 (AWS Signature V4)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# System
libc = "0.2"
dirs = "6"

# Content-defined chunking
fastcdc = { version = "3", features = ["tokio"] }

# Compression
zstd = "0.13"

# Testing
tempfile = "3"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
lto = true
