[package]
name = "shoal-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
shoal-types = { workspace = true }
shoal-store = { workspace = true }
shoal-cas = { workspace = true }
shoal-meta = { workspace = true }
shoal-erasure = { workspace = true }
shoal-placement = { workspace = true }
shoal-cluster = { workspace = true }
shoal-net = { workspace = true }
shoal-engine = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
futures-lite = "2"

[lib]
name = "shoal_integration_tests"
path = "src/lib.rs"

[[test]]
name = "local_pipeline"
path = "integration/local_pipeline.rs"

[[test]]
name = "cluster_formation"
path = "integration/cluster_formation.rs"

[[test]]
name = "write_read"
path = "integration/write_read.rs"

[[test]]
name = "node_failure"
path = "integration/node_failure.rs"

[[test]]
name = "rebalancing"
path = "integration/rebalancing.rs"

[[test]]
name = "stress"
path = "integration/stress.rs"
