[package]
name = "shoal-cas"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
blake3 = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
postcard = { workspace = true }
