[package]
name = "shoal-cas"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
fastcdc = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
postcard = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "chunking"
harness = false
