[package]
name = "shoal-cluster"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
shoal-meta = { workspace = true }
shoal-placement = { workspace = true }
shoal-net = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
futures-lite = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
