[package]
name = "shoal-erasure"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
reed-solomon-simd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "erasure"
harness = false
