[package]
name = "shoal-logtree"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
fjall = { workspace = true }
blake3 = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
rand = { workspace = true }
