[package]
name = "shoal-meta"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
fjall = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
