[package]
name = "shoal-net"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
iroh = { workspace = true }
bytes = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
rand = { workspace = true }
iroh-quinn = "0.16"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
