[package]
name = "shoal-repair"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
shoal-store = { workspace = true }
shoal-meta = { workspace = true }
shoal-erasure = { workspace = true }
shoal-placement = { workspace = true }
shoal-net = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
