[package]
name = "shoal-s3"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
shoal-engine = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
