[package]
name = "shoal-s3"
version.workspace = true
edition.workspace = true

[dependencies]
shoal-types = { workspace = true }
shoal-engine = { workspace = true }
shoal-meta = { workspace = true }
axum = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true }
subtle = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
form_urlencoded = "1.2.2"

[dev-dependencies]
shoal-cluster = { workspace = true }
shoal-meta = { workspace = true }
shoal-store = { workspace = true }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
