[package]
name = "shoal-types"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
postcard = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
