[package]
name = "shoald"
version.workspace = true
edition.workspace = true

[[bin]]
name = "shoald"
path = "src/main.rs"

[dependencies]
shoal-cluster = { workspace = true }
shoal-engine = { workspace = true }
shoal-meta = { workspace = true }
shoal-net = { workspace = true }
shoal-s3 = { workspace = true }
shoal-store = { workspace = true }
shoal-types = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
iroh = { workspace = true }
libc = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tempfile = { workspace = true }
