[package]
name = "shoald"
version.workspace = true
edition.workspace = true

[[bin]]
name = "shoald"
path = "src/main.rs"

[features]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-appender-tracing",
    "dep:tonic",
]

[dependencies]
shoal-cluster = { workspace = true }
shoal-engine = { workspace = true }
shoal-logtree = { workspace = true }
shoal-meta = { workspace = true }
shoal-net = { workspace = true }
shoal-repair = { workspace = true }
shoal-s3 = { workspace = true }
shoal-store = { workspace = true }
shoal-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
dirs = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
libc = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry (optional — enabled via `telemetry` feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }
tempfile = { workspace = true }
